Header small screen issue fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,10 @@
 //import url
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:wght@400;500;700&display=swap");
-// customized bootstrap
+/// customized bootstrap
 @import './assets/scss/customizedBootstrap/bootstrap.scss';
+
+// custom styling
 
 // global
 $hi-grey: #F7F7F7;
@@ -68,7 +70,8 @@ header {
       }
     }
 
-    .navbar-nav {
+    .navbar-nav,
+    .toggle-navbar-bottom-nav {
       .dropdown {
         img {
           width: 40px;
@@ -131,16 +134,28 @@ header {
     display: none;
 
     @media (max-width: 600px) {
-      display: block;
+      display: inline;
     }
 
-    .dropdown {
-      a {
-        color: $hi-dark !important;
+    .navbar-nav {
+      flex-direction: row;
+
+      li {
+        margin-right: 10px;
       }
 
-      i {
-        font-size: 1.8rem;
+      .dropdown {
+        .row {
+          display: flex !important;
+        }
+
+        .large-dropdown {
+          min-width: 20rem !important;
+        }
+
+        img {
+          width: 25px;
+        }
       }
     }
   }
