--- a/src/app/hub/hub.component.html
+++ b/src/app/hub/hub.component.html
@@ -81,8 +81,8 @@
       </ul>
     </div>
   </nav>
-  <div class="toggle-navbar-bottom bg-white">
-    <ul class="row list-unstyled justify-content-end mr-2 mb-0"></ul>
+  <div class="navbar-light toggle-navbar-bottom">
+    <ul class="navbar-nav toggle-navbar-bottom-nav list-unstyled justify-content-end mb-0 bg-white"></ul>
   </div>
 </header>
 <div class="content">
