nav bar js to ts feature navbar/sidebar functions

--- a/src/app/hub/hub.component.html
+++ b/src/app/hub/hub.component.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0);" onclick="toggleSidebar()"><i
+          <a class="nav-link" href="javascript:void(0);" (click)="toggleSidebar()"><i
               class="fas fa-bars align-middle"></i></a>
         </li>
       </ul>
