--- a/src/app/hub/hub.component.html
+++ b/src/app/hub/hub.component.html
@@ -1,7 +1,6 @@
 <header>
   <nav class="navbar navbar-expand navbar-light bg-white">
-    <a class="navbar-brand ml-3 pr-5 border-right py-2" href="#"><img src="../../assets/images/logo.png"
-        alt="Hi Force"></a>
+    <a class="navbar-brand ml-3 pr-5 border-right py-2" href="#"><img src="assets/images/logo.png" alt="Hi Force"></a>
 
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
@@ -23,7 +22,7 @@
                 class="badge badge-danger float-right">8</small></h5>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item row m-0 mt-2" href="#">
-              <div class="col-3 align-self-center"><img src="../../assets/images/avatar.png" class="w-100"></div>
+              <div class="col-3 align-self-center"><img src="assets/images/avatar.png" class="w-100"></div>
               <div class="col-9 align-self-center row">
                 <div>
                   <div class="name">Regina Cooper</div>
@@ -35,7 +34,7 @@
               </div>
             </a>
             <a class="dropdown-item row m-0 mt-2" href="#">
-              <div class="col-3 align-self-center"><img src="../../assets/images/avatar.png" class="w-100"></div>
+              <div class="col-3 align-self-center"><img src="assets/images/avatar.png" class="w-100"></div>
               <div class="col-9 align-self-center row">
                 <div>
                   <div class="name">Regina Cooper</div>
@@ -51,12 +50,12 @@
         <li class="nav-item align-self-center dropdown ml-4 user">
           <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
             aria-expanded="false">
-            <img src="../../assets/images/avatar.png"><span class="align-middle"> Art
+            <img src="assets/images/avatar.png"><span class="align-middle"> Art
               Template</span>
           </a>
           <div class="dropdown-menu large-dropdown dropdown-menu-right" aria-labelledby="userDropdown">
             <h6 class="dropdown-item row m-0 p-2 mt-2 no-bg-hover text-dark">
-              <div class="col-3"><img src="../../assets/images/avatar.png" class="w-100"></div>
+              <div class="col-3"><img src="assets/images/avatar.png" class="w-100"></div>
               <div class="col-9 align-self-center row">
                 <div>
                   <div class="username">ArtTemplate</div>
@@ -176,7 +175,7 @@
               <a class="dropdown-item" href="#"><i class="fas fa-link mr-1"></i>Add a URL</a>
             </div>
           </div>
-          <div class="btn btn-primary btn-sm float" onclick="workspaceToggle(this)" id="worksp"><i
+          <div class="btn btn-primary btn-sm float" (click)="workspaceToggle($event)" id="worksp"><i
               class="fas fa-chevron-right mr-1"></i>Workspace</div>
         </div>
 
@@ -253,7 +252,7 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr onclick="workspaceToggle(this)" id="doc">
+                      <tr (click)="workspaceToggle($event)" id="doc">
                         <td>
                           Group Stock Position - Regional Offices<br />
                           <span class="badge badge-light p-2 mt-2 mt-sm-0">Stock</span>
@@ -263,7 +262,7 @@
                         <td>19 Aug 2020</td>
                         <td class="text-hi-dark-grey">Andrea D'Souza</td>
                       </tr>
-                      <tr onclick="workspaceToggle(this)" id="doc">
+                      <tr (click)="workspaceToggle($event)" id="doc">
                         <td>
                           Group Stock Position - Regional Offices<br />
                           <span class="badge badge-light p-2 mt-2 mt-sm-0">Stock</span>
@@ -273,7 +272,7 @@
                         <td>19 Aug 2020</td>
                         <td class="text-hi-dark-grey">Andrea D'Souza</td>
                       </tr>
-                      <tr onclick="workspaceToggle(this)" id="doc">
+                      <tr (click)="workspaceToggle($event)" id="doc">
                         <td>
                           Group Stock Position - Regional Offices<br />
                           <span class="badge badge-light p-2 mt-2 mt-sm-0">Stock</span>
@@ -283,7 +282,7 @@
                         <td>19 Aug 2020</td>
                         <td class="text-hi-dark-grey">Andrea D'Souza</td>
                       </tr>
-                      <tr onclick="workspaceToggle(this)" id="doc">
+                      <tr (click)="workspaceToggle($event)" id="doc">
                         <td>
                           Group Stock Position - Regional Offices<br />
                           <span class="badge badge-light p-2 mt-2 mt-sm-0">Stock</span>
@@ -326,13 +325,13 @@
               </div>
             </div>
           </div>
-          <div class="workspace w-100 col-md-6" style="display: none;">
-            <div class="document">
+          <div class="workspace w-100 col-md-6" [style.display]="workSecDisp">
+            <div class="document" [style.display]="docDisp">
               <div class="card">
                 <div class="card-header row m-0">
                   <h5 class="font-weight-bold mb-0 pt-1 col-10">Group Stock Position - Regional Offices.pdf</h5>
                   <div class="mr-2 col-1 ml-auto">
-                    <div class="btn btn-light" onclick="closeWorkspace()">
+                    <div class="btn btn-light" (click)="closeWorkspace()">
                       <i class="fas fa-times"></i>
                     </div>
                   </div>
@@ -340,12 +339,12 @@
                 <div class="card-body">
                   <div class="discription row">
                     <div class="col-6 text-center">
-                      <img src="../../assets/images/discription.png">
+                      <img src="assets/images/discription.png">
                     </div>
                     <div class="col-6 align-self-center text-hi-dark work-div primary-bg-hover rounded p-2">
                       <h6 class="font-weight-bold">
                         DESCRIPTION
-                        <a class="float-right text-hi-dark-grey" onclick="openEdit(this)">
+                        <a class="float-right text-hi-dark-grey" (click)="openEdit($event)">
                           <i class=" fas fa-edit"></i>
                         </a>
                       </h6>
@@ -362,7 +361,7 @@
                           </div>
                           <div class="form-group text-right">
                             <button type="reset" class="btn btn-secondary btn-sm"
-                              onclick="closeEdit(this)">Cancel</button>
+                              (click)="closeEdit($event)">Cancel</button>
                             <button type="submit" class="btn btn-primary btn-sm">Submit</button>
                           </div>
                         </form>
@@ -402,7 +401,7 @@
                     <div class="tags mt-3 work-div primary-bg-hover rounded p-2">
                       <div class="font-weight-bold mb-1">
                         Tags
-                        <a class="float-right text-hi-dark-grey" onclick="openEdit(this)">
+                        <a class="float-right text-hi-dark-grey" (click)="openEdit($event)">
                           <i class=" fas fa-edit"></i>
                         </a>
                       </div>
@@ -416,7 +415,7 @@
                           </div>
                           <div class="form-group text-right">
                             <button type="reset" class="btn btn-secondary btn-sm"
-                              onclick="closeEdit(this)">Cancel</button>
+                              (click)="closeEdit($event)">Cancel</button>
                             <button type="submit" class="btn btn-primary btn-sm">Submit</button>
                           </div>
                         </form>
@@ -426,7 +425,7 @@
                       <div class="author col-6 work-div primary-bg-hover rounded p-2">
                         <div class="font-weight-bold mb-1">
                           Author
-                          <a class="float-right text-hi-dark-grey" onclick="openEdit(this)">
+                          <a class="float-right text-hi-dark-grey" (click)="openEdit($event)">
                             <i class="fas fa-edit"></i>
                           </a>
                         </div>
@@ -442,7 +441,7 @@
                             </div>
                             <div class="form-group text-right">
                               <button type="reset" class="btn btn-secondary btn-sm"
-                                onclick="closeEdit(this)">Cancel</button>
+                                (click)="closeEdit($event)">Cancel</button>
                               <button type="submit" class="btn btn-primary btn-sm">Submit</button>
                             </div>
                           </form>
@@ -451,7 +450,7 @@
                       <div class="availibility col-6 work-div primary-bg-hover rounded p-2">
                         <div class="font-weight-bold mb-1">
                           Availibility
-                          <a class="float-right text-hi-dark-grey" onclick="openEdit(this)">
+                          <a class="float-right text-hi-dark-grey" (click)="openEdit($event)">
                             <i class="fas fa-edit"></i>
                           </a>
                         </div>
@@ -471,7 +470,7 @@
                             </div>
                             <div class="form-group text-right">
                               <button type="reset" class="btn btn-secondary btn-sm"
-                                onclick="closeEdit(this)">Cancel</button>
+                                (click)="closeEdit($event)">Cancel</button>
                               <button type="submit" class="btn btn-primary btn-sm">Submit</button>
                             </div>
                           </form>
@@ -481,7 +480,7 @@
                     <div class="language work-div primary-bg-hover rounded p-2">
                       <div class="font-weight-bold mb-1">
                         Language
-                        <a class="float-right text-hi-dark-grey" onclick="openEdit(this)">
+                        <a class="float-right text-hi-dark-grey" (click)="openEdit($event)">
                           <i class="fas fa-edit"></i>
                         </a>
                       </div>
@@ -495,7 +494,7 @@
                           </div>
                           <div class="form-group text-right">
                             <button type="reset" class="btn btn-secondary btn-sm"
-                              onclick="closeEdit(this)">Cancel</button>
+                              (click)="closeEdit($event)">Cancel</button>
                             <button type="submit" class="btn btn-primary btn-sm">Submit</button>
                           </div>
                         </form>
@@ -504,7 +503,7 @@
                     <div class="country work-div primary-bg-hover rounded p-2">
                       <div class="font-weight-bold mb-1">
                         Country
-                        <a class="float-right text-hi-dark-grey" onclick="openEdit(this)">
+                        <a class="float-right text-hi-dark-grey" (click)="openEdit($event)">
                           <i class="fas fa-edit"></i>
                         </a>
                       </div>
@@ -518,7 +517,7 @@
                           </div>
                           <div class="form-group text-right">
                             <button type="reset" class="btn btn-secondary btn-sm"
-                              onclick="closeEdit(this)">Cancel</button>
+                              (click)="closeEdit($event)">Cancel</button>
                             <button type="submit" class="btn btn-primary btn-sm">Submit</button>
                           </div>
                         </form>
@@ -565,7 +564,7 @@
                         <div class="extId mt-3 work-div primary-bg-hover rounded p-2">
                           <div class="font-weight-bold mb-1">
                             External ID
-                            <a class="float-right text-hi-dark-grey" onclick="openEdit(this)">
+                            <a class="float-right text-hi-dark-grey" (click)="openEdit($event)">
                               <i class=" fas fa-edit"></i>
                             </a>
                           </div>
@@ -581,7 +580,7 @@
                               </div>
                               <div class="form-group text-right">
                                 <button type="reset" class="btn btn-secondary btn-sm"
-                                  onclick="closeEdit(this)">Cancel</button>
+                                  (click)="closeEdit($event)">Cancel</button>
                                 <button type="submit" class="btn btn-primary btn-sm">Submit</button>
                               </div>
                             </form>
@@ -632,7 +631,7 @@
                 </div>
               </div>
             </div>
-            <div class="worksp">
+            <div class="worksp" [style.display]="workspDisp">
               <div class="card">
                 <div class="card-header row m-0">
                   <div class="form-group mb-0 exp">
@@ -643,7 +642,7 @@
                     </select>
                   </div>
                   <div class="ml-auto mr-2">
-                    <div class="btn btn-light" onclick="closeWorkspace()">
+                    <div class="btn btn-light" (click)="closeWorkspace()">
                       <i class="fas fa-times"></i>
                     </div>
                   </div>
@@ -714,7 +713,7 @@
                   <h5>English</h5>
                   <div class="main row py-4">
                     <div class="col-3">
-                      <img src="../../assets/images/companyInfo.png" class="w-100">
+                      <img src="assets/images/companyInfo.png" class="w-100">
                       <div class="dropdown">
                         <button class="btn btn-light btn-sm dropdown-toggle" type="button" id="comInfoDD"
                           data-toggle="dropdown">
@@ -732,7 +731,7 @@
                       </div>
                     </div>
                     <div class="col-3">
-                      <img src="../../assets/images/brands.png" class="w-100">
+                      <img src="assets/images/brands.png" class="w-100">
                       <div class="dropdown">
                         <button class="btn btn-light btn-sm dropdown-toggle" type="button" id="comInfoDD"
                           data-toggle="dropdown">
@@ -750,7 +749,7 @@
                       </div>
                     </div>
                     <div class="col-3">
-                      <img src="../../assets/images/services.png" class="w-100">
+                      <img src="assets/images/services.png" class="w-100">
                       <div class="dropdown">
                         <button class="btn btn-light btn-sm dropdown-toggle" type="button" id="comInfoDD"
                           data-toggle="dropdown">
@@ -768,7 +767,7 @@
                       </div>
                     </div>
                     <div class="col-3">
-                      <img src="../../assets/images/showpad.jpg" class="w-100">
+                      <img src="assets/images/showpad.jpg" class="w-100">
                       <div class="dropdown">
                         <button class="btn btn-light btn-sm">
                           <i class="fas fa-trash-alt"></i>
