header issue resolved, tab navigation added

--- a/src/app/hub/hub.component.html
+++ b/src/app/hub/hub.component.html
@@ -150,7 +150,7 @@
     <div class="mt-2">
       <div>
         <mat-tab-group>
-          <mat-tab label="Content">
+          <mat-tab label="Content & Workplace">
             <!-- content and workspace page -->
             <div class="content-workspace">
               <div class="buttons-row row mt-3 justify-content-between mx-2">
