--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,7 +16,14 @@ $hi-dark:#3E434A;
   font-family: 'Poppins', sans-serif;
 }
 
+html,
 body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
   background-color: $hi-grey;
   color: $hi-dark;
 }
@@ -55,6 +62,14 @@ body {
 
 .dark-bg-hover:hover {
   background-color: rgba($black, .075) !important;
+}
+
+.hide {
+  display: none !important;
+}
+
+.show {
+  display: block !important;
 }
 
 // header/navbar
@@ -403,7 +418,8 @@ header {
 
   tr>*:nth-child(2),
   tr>*:nth-child(3),
-  tr>*:nth-child(4) {
+  tr>*:nth-child(4),
+  tr>*:nth-child(5) {
     display: none;
   }
 }
@@ -488,5 +504,31 @@ header {
   }
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+// users page
+// users section & groups section
+.users-section,
+.groups-section {
+  .doc {
+    .card-body {
+      height: 100vh;
+      overflow-y: scroll;
+
+      .doc-details {
+        label {
+          font-size: 14px;
+        }
+      }
+    }
+  }
+}
+
+// groups section
+.groups-section {
+  .heading {
+    .dropdown {
+      .large-dropdown-menu {
+        min-width: 20rem;
+      }
+    }
+  }
+}
