--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -294,7 +294,8 @@
                         <button class="btn btn-light">
                           <i class="fa fa-trash"></i>
                         </button>
-                        <button class="btn btn-light">
+                        <!-- Button trigger for edit user modal -->
+                        <button type="button" class="btn btn-light" data-toggle="modal" data-target="#editUserModal">
                           <i class="fa fa-edit"></i>
                         </button>
                         <button class="btn btn-light">
@@ -302,7 +303,7 @@
                         </button>
                       </div>
                       <div class="card-body">
-                        <div class="doc-details details border-bottom mb-3">
+                        <div class="doc-details details border-bottom mb-3 pb-3">
                           <div class="heading text-hi-dark-grey font-weight-bold">Details</div>
                           <div class="name">
                             <label class="text-hi-dark-grey mb-0 mt-2">Name</label>
@@ -329,7 +330,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="doc-details location border-bottom mb-3">
+                        <div class="doc-details location border-bottom mb-3 pb-3">
                           <div class="heading text-hi-dark-grey font-weight-bold">Location</div>
                           <div class="language">
                             <label class="text-hi-dark-grey mb-0 mt-2">Language</label>
@@ -344,7 +345,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="doc-details status border-bottom mb-3">
+                        <div class="doc-details status border-bottom mb-3 pb-3">
                           <div class="heading text-hi-dark-grey font-weight-bold">Status</div>
                           <div class="activated">
                             <label class="text-hi-dark-grey mb-0 mt-2">Activated</label>
@@ -353,7 +354,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="doc-details prod-licenses border-bottom mb-3">
+                        <div class="doc-details prod-licenses border-bottom mb-3 pb-3">
                           <div class="heading text-hi-dark-grey font-weight-bold">Product Licenses</div>
                           <div class="content_">
                             <label class="text-hi-dark-grey mb-0 mt-2">Content</label>
@@ -362,22 +363,22 @@
                             </div>
                           </div>
                         </div>
-                        <div class="doc-details in-groups border-bottom mb-3">
+                        <div class="doc-details in-groups border-bottom mb-3 pb-3">
                           <div class="heading text-hi-dark-grey font-weight-bold">In Groups</div>
                           <div class="value mt-2">
-                            <ul class="list-unstyled">
+                            <ul class="list-unstyled mb-0">
                               <li>All Users</li>
                               <li>HES & Hi-Force</li>
                               <li>ABC</li>
                             </ul>
                           </div>
                         </div>
-                        <div class="doc-details assigned-experiences border-bottom mb-3">
+                        <div class="doc-details assigned-experiences border-bottom mb-3 pb-3">
                           <div class="heading text-hi-dark-grey font-weight-bold">Assigned Experiences</div>
                           <div class="individually">
                             <label class="text-hi-dark-grey mb-0 mt-2">Individually</label>
                             <div class="value">
-                              <ul class="list-unstyled">
+                              <ul class="list-unstyled mb-0">
                                 <li>Charity</li>
                                 <li>Abc</li>
                                 <li>def</li>
@@ -387,7 +388,7 @@
                           <div class="via-group">
                             <label class="text-hi-dark-grey mb-0 mt-2">Via Group</label>
                             <div class="value">
-                              <ul class="list-unstyled">
+                              <ul class="list-unstyled mb-0">
                                 <li>Charity</li>
                                 <li>Abc</li>
                                 <li>def</li>
@@ -395,7 +396,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="doc-details information border-bottom mb-3">
+                        <div class="doc-details information border-bottom mb-3 pb-3">
                           <div class="heading text-hi-dark-grey font-weight-bold">Information</div>
                           <div class="created">
                             <label class="text-hi-dark-grey mb-0 mt-2">Created</label>
@@ -459,7 +460,7 @@
                     <div class="card-body">
                       <h5 class="card-title">
                         <div class="row heading">
-                          <div class="search col-lg-6">
+                          <div class="search col-md-5">
                             <div class="input-group">
                               <div class="input-group-prepend">
                                 <span class="input-group-text bg-transparent"><i class="fas fa-search"></i></span>
@@ -472,8 +473,8 @@
                               </div>
                             </div>
                           </div>
-                          <div class="col-lg-6 align-self-center row justify-content-around">
-                            <div class="dropdown">
+                          <div class="col-md-7 align-self-center row justify-content-end">
+                            <div class="dropdown mr-2">
                               <button class="btn btn-light dropdown-toggle" type="button" id="propTrigger"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Property
@@ -513,7 +514,7 @@
                                 </button>
                               </div>
                             </div>
-                            <div class="dropdown">
+                            <div class="dropdown mr-2">
                               <button class="btn btn-light dropdown-toggle" type="button" id="divisionTrigger"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Division
@@ -552,7 +553,7 @@
                                 </button>
                               </div>
                             </div>
-                            <div class="dropdown">
+                            <div class="dropdown mr-2">
                               <button class="btn btn-light dropdown-toggle" type="button" id="divisionTrigger"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Experience
@@ -667,7 +668,7 @@
                         </button>
                       </div>
                       <div class="card-body">
-                        <div class="doc-details details border-bottom mb-3">
+                        <div class="doc-details details border-bottom mb-3 pb-3">
                           <div class="heading text-hi-dark-grey font-weight-bold">Details</div>
                           <div class="name">
                             <label class="text-hi-dark-grey mb-0 mt-2">Name</label>
@@ -682,15 +683,15 @@
                             </div>
                           </div>
                         </div>
-                        <div class="doc-details assigned-divisions border-bottom mb-3">
+                        <div class="doc-details assigned-divisions border-bottom mb-3 pb-3">
                           <div class="heading text-hi-dark-grey font-weight-bold">Assigned Division(s)</div>
                           <div class="value mt-2">
-                            <ul class="list-unstyled">
+                            <ul class="list-unstyled mb-0">
                               <li>Hi-force</li>
                             </ul>
                           </div>
                         </div>
-                        <div class="doc-details information border-bottom mb-3">
+                        <div class="doc-details information border-bottom mb-3 pb-3">
                           <div class="heading text-hi-dark-grey font-weight-bold">Information</div>
                           <div class="creation-date">
                             <label class="text-hi-dark-grey mb-0 mt-2">Creation Date</label>
@@ -717,7 +718,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="doc-details status border-bottom mb-3">
+                        <div class="doc-details status border-bottom mb-3 pb-3">
                           <div class="heading text-hi-dark-grey font-weight-bold">Status</div>
                           <div class="anonymized">
                             <label class="text-hi-dark-grey mb-0 mt-2">Anonymized</label>
@@ -726,17 +727,17 @@
                             </div>
                           </div>
                         </div>
-                        <div class="doc-details in-experiences border-bottom mb-3">
+                        <div class="doc-details in-experiences border-bottom mb-3 pb-3">
                           <div class="heading text-hi-dark-grey font-weight-bold">In Experiences</div>
                           <div class="value mt-2">
-                            <ul class="list-unstyled">
+                            <ul class="list-unstyled mb-0">
                               <li>All Users</li>
                               <li>HES & Hi-Force</li>
                               <li>ABC</li>
                             </ul>
                           </div>
                         </div>
-                        <div class="doc-details licenses border-bottom mb-3">
+                        <div class="doc-details licenses">
                           <div class="heading text-hi-dark-grey font-weight-bold">Licenses</div>
                           <div class="direct">
                             <label class="text-hi-dark-grey mb-0 mt-2">Direct</label>
@@ -829,6 +830,72 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
         <button type="button" class="btn btn-primary">Create</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- edit user Modal -->
+<div class="modal fade" id="editUserModal" tabindex="-1" aria-labelledby="editUserModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="editUserModalLabel">Edit User</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="row justify-content-between m-0">
+          <mat-form-field appearance="outline">
+            <mat-label>First Name</mat-label>
+            <input matInput placeholder="Your First Name">
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Last Name</mat-label>
+            <input matInput placeholder="Your Last Name">
+          </mat-form-field>
+        </div>
+        <mat-form-field appearance="outline">
+          <mat-label>E-mail</mat-label>
+          <input matInput placeholder="Your E-mail">
+        </mat-form-field>
+        <div class="row justify-content-between m-0">
+          <mat-form-field appearance="outline">
+            <mat-label>Language</mat-label>
+            <input matInput placeholder="Your Language">
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Time Zone</mat-label>
+            <input matInput placeholder="Your Time Zone">
+          </mat-form-field>
+        </div>
+
+        <div class="border w-100 mb-4"></div>
+
+        <div class="row justify-content-between m-0">
+          <mat-form-field appearance="outline">
+            <mat-label>Role</mat-label>
+            <input matInput placeholder="Your Role">
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>User's Groups</mat-label>
+            <input matInput placeholder="Your Groups">
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-label>Product Licenses</mat-label><br />
+          <mat-checkbox class="ml-3">Content</mat-checkbox>
+        </div>
+        <div>
+          <mat-label>Status</mat-label><br />
+          <mat-checkbox class="ml-3">Activated</mat-checkbox>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary">Modify User</button>
       </div>
     </div>
   </div>
