--- a/src/app/home-layout/sidebar/sidebar.component.html
+++ b/src/app/home-layout/sidebar/sidebar.component.html
@@ -4,8 +4,9 @@
       <div class="link-icon pr-3 align-middle"><i class="fas fa-th-large"></i></div>
       <div class="link-text align-middle">Dashboard</div>
     </a>
-    <div class="dropright py-2 active">
-      <a class="nav-item text-hi-dark dropdown-toggle p-2 pl-3" [routerLinkActive]="['active']" [routerLink]="'/hub'" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <div class="dropright py-2" [routerLinkActive]="['active']">
+      <a class="nav-item text-hi-dark dropdown-toggle p-2 pl-3" [routerLink]="'/hub'" id="navbarDropdown" role="button"
+        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <div class="link-icon pr-3 align-middle w-100"><i class="fas fa-layer-group"></i></div>
         <div class="link-text align-middle">Hub</div>
       </a>
