--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -35,12 +35,12 @@
                               <div class="search col-lg-8 col-sm-7">
                                 <div class="input-group">
                                   <div class="input-group-prepend">
-                                    <span class="input-group-text bg-transparent"><i class="fas fa-search"></i></span>
+                                    <span class="input-group-text bg-white"><i class="fas fa-search"></i></span>
                                   </div>
                                   <input type="text" class="form-control border-left-0 border-right-0"
                                     placeholder="Search ...">
                                   <div class="input-group-append">
-                                    <span class="input-group-text bg-transparent primary-bg-hover"><i
+                                    <span class="input-group-text bg-white primary-bg-hover"><i
                                         class="fas fa-sliders-h"></i></span>
                                   </div>
                                 </div>
