--- a/src/app/hub/hub.component.html
+++ b/src/app/hub/hub.component.html
@@ -36,12 +36,12 @@
                               <div class="search col-lg-8 col-sm-7">
                                 <div class="input-group">
                                   <div class="input-group-prepend">
-                                    <span class="input-group-text bg-transparent"><i class="fas fa-search"></i></span>
+                                    <span class="input-group-text bg-white"><i class="fas fa-search"></i></span>
                                   </div>
                                   <input type="text" class="form-control border-left-0 border-right-0"
                                     placeholder="Search ...">
                                   <div class="input-group-append">
-                                    <span class="input-group-text bg-transparent primary-bg-hover"><i
+                                    <span class="input-group-text bg-white primary-bg-hover"><i
                                         class="fas fa-sliders-h"></i></span>
                                   </div>
                                 </div>
@@ -613,8 +613,8 @@
         </mat-tab>
         <mat-tab label="Tags">
           <!-- tags page -->
-          <div class="tags-page">
-            <div class="sub-tab-nav">
+          <div class="tags-page row mx-0">
+            <div class="sub-tab-nav col-md-12">
               <div class="card mt-4">
                 <div class="card-header">
                   <mat-tab-group>
@@ -625,12 +625,12 @@
                             <div class="search">
                               <div class="input-group">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text bg-transparent"><i class="fas fa-search"></i></span>
+                                  <span class="input-group-text bg-white"><i class="fas fa-search"></i></span>
                                 </div>
                                 <input type="text" class="form-control border-left-0 border-right-0"
                                   placeholder="Search ...">
                                 <div class="input-group-append">
-                                  <span class="input-group-text bg-transparent primary-bg-hover"><i
+                                  <span class="input-group-text bg-white primary-bg-hover"><i
                                       class="fas fa-sliders-h"></i></span>
                                 </div>
                               </div>
@@ -648,7 +648,7 @@
                               </tr>
                             </thead>
                             <tbody>
-                              <tr>
+                              <tr (click)="workspaceToggle($event)" id="doc">
                                 <td>
                                   Group Stock Position - Regional Offices<br />
                                   <span class="badge badge-light p-2 mt-2 mt-sm-0">Stock</span>
@@ -657,7 +657,7 @@
                                 <td class="text-hi-dark-grey">Used in Filter</td>
                                 <td>19 Aug 2020</td>
                               </tr>
-                              <tr>
+                              <tr (click)="workspaceToggle($event)" id="doc">
                                 <td>
                                   Group Stock Position - Regional Offices<br />
                                   <span class="badge badge-light p-2 mt-2 mt-sm-0">Stock</span>
@@ -666,7 +666,7 @@
                                 <td class="text-hi-dark-grey">Used in Filter</td>
                                 <td>19 Aug 2020</td>
                               </tr>
-                              <tr>
+                              <tr (click)="workspaceToggle($event)" id="doc">
                                 <td>
                                   Group Stock Position - Regional Offices<br />
                                   <span class="badge badge-light p-2 mt-2 mt-sm-0">Stock</span>
@@ -675,7 +675,7 @@
                                 <td class="text-hi-dark-grey">Used in Filter</td>
                                 <td>19 Aug 2020</td>
                               </tr>
-                              <tr>
+                              <tr (click)="workspaceToggle($event)" id="doc">
                                 <td>
                                   Group Stock Position - Regional Offices<br />
                                   <span class="badge badge-light p-2 mt-2 mt-sm-0">Stock</span>
@@ -719,6 +719,57 @@
                     <mat-tab label="Uncategorized">Same Table</mat-tab>
                     <mat-tab label="Add">Add category</mat-tab>
                   </mat-tab-group>
+                </div>
+              </div>
+            </div>
+            <div class="workspace w-100 col-md-6 mt-4" [style.display]="workSecDisp">
+              <div class="document" [style.display]="docDisp">
+                <div class="card">
+                  <div class="card-header row m-0">
+                    <h5 class="font-weight-bold mb-0 pt-1 col-10">Group Stock Position</h5>
+                    <div class="mr-2 col-1 ml-auto">
+                      <div class="btn btn-light" (click)="closeWorkspace()">
+                        <i class="fas fa-times"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card-body">
+                    <div class="doc-details details border-bottom mb-3 pb-3">
+                      <div class="name">
+                        <label class="text-hi-dark-grey mb-0 mt-2">Details</label>
+                        <div class="value">
+                          3C Metal ABC
+                        </div>
+                      </div>
+                      <div class="orgCategories">
+                        <label class="text-hi-dark-grey mb-0 mt-2">Organisation in Categories</label>
+                        <div class="value">
+                          No Catgories
+                        </div>
+                      </div>
+                      <div class="usedIn">
+                        <label class="text-hi-dark-grey mb-0 mt-2">Used In</label>
+                        <div class="value">
+                          1 saved filter
+                        </div>
+                      </div>
+                    </div>
+                    <div class="doc-details status">
+                      <div class="heading text-hi-dark-grey font-weight-bold">Status</div>
+                      <div class="created">
+                        <label class="text-hi-dark-grey mb-0 mt-2">Date Created</label>
+                        <div class="value">
+                          15 Oct 2019, 17:55
+                        </div>
+                      </div>
+                      <div class="updated">
+                        <label class="text-hi-dark-grey mb-0 mt-2">Date Updated</label>
+                        <div class="value">
+                          15 Oct 2019, 17:55
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
