--- a/src/app/home-layout/sidebar/sidebar.component.html
+++ b/src/app/home-layout/sidebar/sidebar.component.html
@@ -5,15 +5,15 @@
       <div class="link-text align-middle">Dashboard</div>
     </a>
     <div class="dropright py-2" [routerLinkActive]="['active']">
-      <a class="nav-item text-hi-dark dropdown-toggle p-2 pl-3" [routerLink]="'/hub'" id="navbarDropdown" role="button"
-        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <a class="nav-item text-hi-dark dropdown-toggle p-2 pl-3" id="navbarDropdown" role="button" data-toggle="dropdown"
+        aria-haspopup="true" aria-expanded="false">
         <div class="link-icon pr-3 align-middle w-100"><i class="fas fa-layer-group"></i></div>
         <div class="link-text align-middle">Hub</div>
       </a>
       <div class="dropdown-menu ml-0" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item text-hi-dark" href="javascript:void(0)">H.E.S. Sales Limited</a>
-        <a class="dropdown-item text-hi-dark" href="javascript:void(0)">Hi-Force</a>
-        <a class="dropdown-item text-hi-dark" href="javascript:void(0)">Protec SRL</a>
+        <a class="dropdown-item text-hi-dark" href="javascript:void(0)" [routerLink]="'/hub'">H.E.S. Sales Limited</a>
+        <a class="dropdown-item text-hi-dark" href="javascript:void(0)" [routerLink]="'/hub'">Hi-Force</a>
+        <a class="dropdown-item text-hi-dark" href="javascript:void(0)" [routerLink]="'/hub'">Protec SRL</a>
       </div>
     </div>
     <a class="nav-item p-2 text-hi-dark pl-3" [routerLinkActive]="['active']" [routerLink]="'/user'">
@@ -21,7 +21,7 @@
       <div class="link-text align-middle">Users</div>
     </a>
     <a class="nav-item p-2 text-hi-dark pl-3" [routerLinkActive]="['active']" [routerLink]="'/communication'">
-      <div class="link-icon pr-3 align-middle"><i class="far fa-envelope"></i></div>
+      <div class="link-icon pr-3 align-middle"><i class="fas fa-envelope"></i></div>
       <div class="link-text align-middle">Communication</div>
     </a>
     <a class="nav-item p-2 text-hi-dark pl-3" href="javascript:void(0)">
