--- a/src/app/hub/hub.component.html
+++ b/src/app/hub/hub.component.html
@@ -135,7 +135,7 @@
                                 <a class="page-link" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i
                                     class="fas fa-chevron-left"></i></a>
                               </li>
-                              <li class="page-item"><a class="page-link" href="javascript:void(0)">1</a></li>
+                              <li class="page-item active"><a class="page-link" href="javascript:void(0)">1</a></li>
                               <li class="page-item"><a class="page-link" href="javascript:void(0)">2</a></li>
                               <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
                               <li class="page-item">
