--- a/src/app/hub/hub.component.html
+++ b/src/app/hub/hub.component.html
@@ -222,7 +222,7 @@
                                   </form>
                                 </div>
                               </div>
-                              <div class="row mt-3 px-3 mx-0">
+                              <div class="row mt-3 mx-0">
                                 <div class="author col-6 work-div primary-bg-hover rounded p-2">
                                   <div class="font-weight-bold mb-1">
                                     Author
