--- a/src/app/home-layout/sidebar/sidebar.component.html
+++ b/src/app/home-layout/sidebar/sidebar.component.html
@@ -24,7 +24,7 @@
       <div class="link-icon pr-3 align-middle"><i class="fas fa-envelope"></i></div>
       <div class="link-text align-middle">Communication</div>
     </a>
-    <a class="nav-item p-2 text-hi-dark pl-3" href="javascript:void(0)">
+    <a class="nav-item p-2 text-hi-dark pl-3" [routerLinkActive]="['active']" [routerLink]="'/reports'">
       <div class="link-icon pr-3 align-middle"><i class="fas fa-signal"></i></div>
       <div class="link-text align-middle">Reports</div>
     </a>
