--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -10,19 +10,15 @@
           <div class="users-section">
             <div class="buttons-row row mt-3 justify-content-between mx-2">
               <div class="dropdown">
-                <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="addCOntentDD"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="addCOntentDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Add
                 </button>
                 <div class="dropdown-menu" aria-labelledby="addCOntentDD">
-                  <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-user-plus mr-1"></i>Create New
-                    User</a>
-                  <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-file-import mr-1"></i>Import CSV
-                    File</a>
+                  <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-user-plus mr-1"></i>Create New User</a>
+                  <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-file-import mr-1"></i>Import CSV File</a>
                 </div>
               </div>
             </div>
-
             <div class="row mt-4 mx-0">
               <div [ngClass]="{'sub-tab-nav': true,'col-md-12' : !showDoc, 'col-md-8': showDoc}">
                 <div class="card">
@@ -37,26 +33,22 @@
                                   <div class="input-group-prepend">
                                     <span class="input-group-text bg-white"><i class="fas fa-search"></i></span>
                                   </div>
-                                  <input type="text" class="form-control border-left-0 border-right-0"
-                                    placeholder="Search ...">
+                                  <input type="text" class="form-control border-left-0 border-right-0" placeholder="Search ...">
                                   <div class="input-group-append">
-                                    <span class="input-group-text bg-white primary-bg-hover"><i
-                                        class="fas fa-sliders-h"></i></span>
+                                    <span class="input-group-text bg-white primary-bg-hover"><i class="fas fa-sliders-h"></i></span>
                                   </div>
                                 </div>
                               </div>
                               <div class="col-lg-4 col-sm-5 align-self-center">
                                 <div class="float-left">
                                   <!-- Button trigger for send invitations modal -->
-                                  <button type="button" class="btn btn-light" data-toggle="modal"
-                                    data-target="#sendInvModal">
+                                  <button type="button" class="btn btn-light" data-toggle="modal" data-target="#sendInvModal">
                                     Send Invitations
                                   </button>
                                 </div>
                                 <div class="float-right">
                                   <div class="dropdown">
-                                    <button class="btn btn-light dropdown-toggle" type="button" id="settingsID"
-                                      data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <button class="btn btn-light dropdown-toggle" type="button" id="settingsID" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                       <i class="fas fa-cog"></i>
                                     </button>
                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="settingsID">
@@ -91,8 +83,7 @@
                               <thead>
                                 <tr>
                                   <th scope="col">NAME<i class="fas fa-sort-down ml-1 align-top"></i></th>
-                                  <th scope="col">Latest Activity<i class="fas fa-sort-down ml-1 align-top"></i>
-                                  </th>
+                                  <th scope="col">Latest Activity<i class="fas fa-sort-down ml-1 align-top"></i></th>
                                   <th scope="col">Content Updated<i class="fas fa-sort-down ml-1 align-top"></i></th>
                                   <th scope="col">Role<i class="fas fa-sort-down ml-1 align-top"></i></th>
                                   <th scope="col">Date Created<i class="fas fa-sort-down ml-1 align-top"></i></th>
@@ -120,16 +111,15 @@
                                   <option>20</option>
                                 </select>
                                 <div class="input-group-append">
-                                  <label class="input-group-text bg-white border-0 text-hi-dark-grey"
-                                    for="inputGroupSelect02">Showing 1-10 of
-                                    100</label>
+                                  <label class="input-group-text bg-white border-0 text-hi-dark-grey" for="inputGroupSelect02">
+                                    Showing 1-10 of 100
+                                  </label>
                                 </div>
                               </div>
                             </div>
                             <ul class="pagination">
                               <li class="page-item disabled">
-                                <a class="page-link" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i
-                                    class="fas fa-chevron-left"></i></a>
+                                <a class="page-link" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i class="fas fa-chevron-left"></i></a>
                               </li>
                               <li class="page-item"><a class="page-link" href="javascript:void(0)">1</a></li>
                               <li class="page-item"><a class="page-link" href="javascript:void(0)">2</a></li>
@@ -333,18 +323,15 @@
                             <div class="input-group-prepend">
                               <span class="input-group-text bg-transparent"><i class="fas fa-search"></i></span>
                             </div>
-                            <input type="text" class="form-control border-left-0 border-right-0"
-                              placeholder="Search ...">
+                            <input type="text" class="form-control border-left-0 border-right-0" placeholder="Search ...">
                             <div class="input-group-append">
-                              <span class="input-group-text bg-transparent primary-bg-hover"><i
-                                  class="fas fa-sliders-h"></i></span>
+                              <span class="input-group-text bg-transparent primary-bg-hover"><i class="fas fa-sliders-h"></i></span>
                             </div>
                           </div>
                         </div>
                         <div class="col-md-7 align-self-center row justify-content-end">
                           <div class="dropdown mr-2">
-                            <button class="btn btn-light dropdown-toggle" type="button" id="propTrigger"
-                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <button class="btn btn-light dropdown-toggle" type="button" id="propTrigger" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                               Property
                             </button>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="propTrigger">
@@ -383,12 +370,10 @@
                             </div>
                           </div>
                           <div class="dropdown mr-2">
-                            <button class="btn btn-light dropdown-toggle" type="button" id="divisionTrigger"
-                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <button class="btn btn-light dropdown-toggle" type="button" id="divisionTrigger" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                               Division
                             </button>
-                            <div class="dropdown-menu dropdown-menu-right large-dropdown-menu"
-                              aria-labelledby="divisionTrigger">
+                            <div class="dropdown-menu dropdown-menu-right large-dropdown-menu" aria-labelledby="divisionTrigger">
                               <div class="input-group mb-2 p-2">
                                 <div class="input-group-prepend">
                                   <span class="input-group-text bg-white">
@@ -422,12 +407,10 @@
                             </div>
                           </div>
                           <div class="dropdown mr-2">
-                            <button class="btn btn-light dropdown-toggle" type="button" id="divisionTrigger"
-                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <button class="btn btn-light dropdown-toggle" type="button" id="divisionTrigger" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                               Experience
                             </button>
-                            <div class="dropdown-menu dropdown-menu-right large-dropdown-menu"
-                              aria-labelledby="divisionTrigger">
+                            <div class="dropdown-menu dropdown-menu-right large-dropdown-menu" aria-labelledby="divisionTrigger">
                               <div class="input-group mb-2 p-2">
                                 <div class="input-group-prepend">
                                   <span class="input-group-text bg-white">
@@ -497,16 +480,14 @@
                             <option>20</option>
                           </select>
                           <div class="input-group-append">
-                            <label class="input-group-text bg-white border-0 text-hi-dark-grey"
-                              for="inputGroupSelect02">Showing 1-10 of
+                            <label class="input-group-text bg-white border-0 text-hi-dark-grey" for="inputGroupSelect02">Showing 1-10 of
                               100</label>
                           </div>
                         </div>
                       </div>
                       <ul class="pagination">
                         <li class="page-item disabled">
-                          <a class="page-link" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i
-                              class="fas fa-chevron-left"></i></a>
+                          <a class="page-link" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i class="fas fa-chevron-left"></i></a>
                         </li>
                         <li class="page-item"><a class="page-link" href="javascript:void(0)">1</a></li>
                         <li class="page-item"><a class="page-link" href="javascript:void(0)">2</a></li>
@@ -670,8 +651,7 @@
 </div>
 
 <!-- Create New Group Modal -->
-<div class="modal fade" id="createNewGroupModal" tabindex="-1" aria-labelledby="createNewGroupModalLabel"
-  aria-hidden="true">
+<div class="modal fade" id="createNewGroupModal" tabindex="-1" aria-labelledby="createNewGroupModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -738,9 +718,7 @@
             <input matInput placeholder="Your Time Zone">
           </mat-form-field>
         </div>
-
         <div class="border w-100 mb-4"></div>
-
         <div class="row justify-content-between m-0">
           <mat-form-field appearance="outline">
             <mat-label>Role</mat-label>
