--- a/src/app/commn/commn.component.html
+++ b/src/app/commn/commn.component.html
@@ -70,16 +70,14 @@
                                   <option>20</option>
                                 </select>
                                 <div class="input-group-append">
-                                  <label class="input-group-text bg-white border-0 text-hi-dark-grey"
-                                    for="inputGroupSelect02">Showing 1-10 of
+                                  <label class="input-group-text bg-white border-0 text-hi-dark-grey" for="inputGroupSelect02">Showing 1-10 of
                                     100</label>
                                 </div>
                               </div>
                             </div>
                             <ul class="pagination">
                               <li class="page-item disabled">
-                                <a class="page-link" href="#" tabindex="-1" aria-disabled="true"><i
-                                    class="fas fa-chevron-left"></i></a>
+                                <a class="page-link" href="#" tabindex="-1" aria-disabled="true"><i class="fas fa-chevron-left"></i></a>
                               </li>
                               <li class="page-item"><a class="page-link" href="#">1</a></li>
                               <li class="page-item"><a class="page-link" href="#">2</a></li>
@@ -237,13 +235,12 @@
 </div>
 
 <!-- new announcment Modal -->
-<div [ngClass]="{'modal fade': true, 'show': showNewAnn}" id="newAnnouncements" tabindex="-1" role="dialog"
-  aria-labelledby="newAnnouncementsLabel" aria-hidden="true">
+<div [ngClass]="{'modal fade': true, 'show': showNewAnn}" id="newAnnouncements" tabindex="-1" role="dialog" aria-labelledby="newAnnouncementsLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="newAnnouncementsLabel">New Announcement</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" aria-label="Close" (click)="closeNewAnn()">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
