--- a/src/app/hub/hub.component.html
+++ b/src/app/hub/hub.component.html
@@ -5,7 +5,7 @@
   <div class="mt-2">
     <div>
       <mat-tab-group>
-        <mat-tab label="Content & Workplace">
+        <mat-tab label="Content & Workspace">
           <!-- content and workspace page -->
           <div class="content-workspace">
             <div class="buttons-row row mt-3 justify-content-between mx-2">
@@ -26,14 +26,14 @@
 
             <div class="row mt-4 mx-0">
               <div class="sub-tab-nav col-md-12">
-                <div class="card">
-                  <div class="card-header">
+                <div class="card overflow-hidden">
+                  <div class="card-header border-0">
                     <mat-tab-group>
                       <mat-tab label="All">
-                        <div class="card-body">
-                          <h5 class="card-title">
-                            <div class="row heading">
-                              <div class="search col-lg-8 col-sm-7">
+                        <div class="card-body bg-white rounded-bottom px-0 pb-0">
+                          <h5 class="card-title px-3">
+                            <div class="heading">
+                              <div class="search">
                                 <div class="input-group">
                                   <div class="input-group-prepend">
                                     <span class="input-group-text bg-white"><i class="fas fa-search"></i></span>
@@ -46,22 +46,9 @@
                                   </div>
                                 </div>
                               </div>
-                              <div class="add-content col-lg-4 col-sm-5 text-right">
-                                <div class="dropdown mt-3 mt-sm-0">
-                                  <button class="btn btn-light border dropdown-toggle" type="button" id="actionsDD"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Add Content
-                                  </button>
-                                  <div class="dropdown-menu" aria-labelledby="actionsDD">
-                                    <a class="dropdown-item" href="javascript:void(0)">Upload Files</a>
-                                    <a class="dropdown-item" href="javascript:void(0)">Add a URL</a>
-                                    <a class="dropdown-item" href="javascript:void(0)">Import from</a>
-                                  </div>
-                                </div>
-                              </div>
                             </div>
                           </h5>
-                          <div class="card-text">
+                          <div class="card-text px-3">
                             <table class="table table-hover text-dark w-100">
                               <thead>
                                 <tr>
@@ -116,7 +103,7 @@
                               </tbody>
                             </table>
                           </div>
-                          <div class="card-footer bg-white row justify-content-between">
+                          <div class="card-footer row justify-content-between mx-0">
                             <div class="pages">
                               <div class="input-group mb-3">
                                 <select class="custom-select rounded" id="inputGroupSelect02">
@@ -124,7 +111,7 @@
                                   <option>20</option>
                                 </select>
                                 <div class="input-group-append">
-                                  <label class="input-group-text bg-white border-0 text-hi-dark-grey"
+                                  <label class="input-group-text bg-transparent border-0 text-hi-dark-grey"
                                     for="inputGroupSelect02">Showing 1-10 of
                                     100</label>
                                 </div>
@@ -132,14 +119,19 @@
                             </div>
                             <ul class="pagination">
                               <li class="page-item disabled">
-                                <a class="page-link" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i
-                                    class="fas fa-chevron-left"></i></a>
+                                <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1"
+                                  aria-disabled="true"><i class="fas fa-chevron-left"></i></a>
                               </li>
-                              <li class="page-item active"><a class="page-link" href="javascript:void(0)">1</a></li>
-                              <li class="page-item"><a class="page-link" href="javascript:void(0)">2</a></li>
-                              <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
+                              <li class="page-item active"><a class="page-link bg-hi-grey"
+                                  href="javascript:void(0)">1</a>
+                              </li>
+                              <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">2</a>
+                              </li>
+                              <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">3</a>
+                              </li>
                               <li class="page-item">
-                                <a class="page-link" href="javascript:void(0)"><i class="fas fa-chevron-right"></i></a>
+                                <a class="page-link bg-hi-grey" href="javascript:void(0)"><i
+                                    class="fas fa-chevron-right"></i></a>
                               </li>
                             </ul>
                           </div>
@@ -445,7 +437,7 @@
                     <div class="card-header row m-0">
                       <div class="form-group mb-0 exp">
                         <select class="form-control bg-transparent border-0">
-                          <option selected hidden>Select an Experience</option>
+                          <option selected hidden>Select a Workspace</option>
                           <option>English</option>
                           <option>Stock</option>
                         </select>
@@ -615,12 +607,12 @@
           <!-- tags page -->
           <div class="tags-page row mx-0">
             <div class="sub-tab-nav col-md-12">
-              <div class="card mt-4">
-                <div class="card-header">
+              <div class="card mt-4 overflow-hidden">
+                <div class="card-header border-0">
                   <mat-tab-group>
                     <mat-tab label="All Tags">
-                      <div class="card-body">
-                        <h5 class="card-title">
+                      <div class="card-body bg-white rounded-bottom px-0 pb-0">
+                        <h5 class="card-title px-3">
                           <div class="heading">
                             <div class="search">
                               <div class="input-group">
@@ -637,7 +629,7 @@
                             </div>
                           </div>
                         </h5>
-                        <div class="card-text">
+                        <div class="card-text px-3">
                           <table class="table table-hover text-dark w-100">
                             <thead>
                               <tr>
@@ -687,7 +679,7 @@
                             </tbody>
                           </table>
                         </div>
-                        <div class="card-footer bg-white row justify-content-between">
+                        <div class="card-footer row justify-content-between mx-0">
                           <div class="pages">
                             <div class="input-group mb-3">
                               <select class="custom-select rounded" id="inputGroupSelect02">
@@ -695,22 +687,23 @@
                                 <option>20</option>
                               </select>
                               <div class="input-group-append">
-                                <label class="input-group-text bg-white border-0 text-hi-dark-grey"
-                                  for="inputGroupSelect02">Showing 1-10 of
+                                <label class="input-group-text border-0 bg-transparent" for="inputGroupSelect02">Showing
+                                  1-10 of
                                   100</label>
                               </div>
                             </div>
                           </div>
                           <ul class="pagination">
                             <li class="page-item disabled">
-                              <a class="page-link" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i
-                                  class="fas fa-chevron-left"></i></a>
+                              <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1"
+                                aria-disabled="true"><i class="fas fa-chevron-left"></i></a>
                             </li>
-                            <li class="page-item"><a class="page-link" href="javascript:void(0)">1</a></li>
-                            <li class="page-item"><a class="page-link" href="javascript:void(0)">2</a></li>
-                            <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
+                            <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">1</a></li>
+                            <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">2</a></li>
+                            <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">3</a></li>
                             <li class="page-item">
-                              <a class="page-link" href="javascript:void(0)"><i class="fas fa-chevron-right"></i></a>
+                              <a class="page-link bg-hi-grey" href="javascript:void(0)"><i
+                                  class="fas fa-chevron-right"></i></a>
                             </li>
                           </ul>
                         </div>
