--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -25,12 +25,12 @@
 
             <div class="row mt-4 mx-0">
               <div [ngClass]="{'sub-tab-nav': true,'col-md-12' : !showDoc, 'col-md-8': showDoc}">
-                <div class="card">
-                  <div class="card-header">
+                <div class="card overflow-hidden">
+                  <div class="card-header border-0">
                     <mat-tab-group>
                       <mat-tab label="All Users">
-                        <div class="card-body">
-                          <h5 class="card-title">
+                        <div class="card-body rounded-bottom bg-white px-0 pb-0">
+                          <h5 class="card-title px-3">
                             <div class="row heading">
                               <div class="search col-lg-8 col-sm-7">
                                 <div class="input-group">
@@ -86,7 +86,7 @@
                               </div>
                             </div>
                           </h5>
-                          <div class="card-text">
+                          <div class="card-text px-3">
                             <table [ngClass]="{'table table-hover text-dark w-100': true, 'hide-rows': showDoc}">
                               <thead>
                                 <tr>
@@ -112,7 +112,7 @@
                               </tbody>
                             </table>
                           </div>
-                          <div class="card-footer bg-white row justify-content-between">
+                          <div class="card-footer row justify-content-between mx-0">
                             <div class="pages">
                               <div class="input-group mb-3">
                                 <select class="custom-select rounded" id="inputGroupSelect02">
@@ -120,7 +120,7 @@
                                   <option>20</option>
                                 </select>
                                 <div class="input-group-append">
-                                  <label class="input-group-text bg-white border-0 text-hi-dark-grey"
+                                  <label class="input-group-text bg-white border-0 bg-transparent"
                                     for="inputGroupSelect02">Showing 1-10 of
                                     100</label>
                                 </div>
@@ -128,14 +128,15 @@
                             </div>
                             <ul class="pagination">
                               <li class="page-item disabled">
-                                <a class="page-link" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i
-                                    class="fas fa-chevron-left"></i></a>
+                                <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1"
+                                  aria-disabled="true"><i class="fas fa-chevron-left"></i></a>
                               </li>
-                              <li class="page-item"><a class="page-link" href="javascript:void(0)">1</a></li>
-                              <li class="page-item"><a class="page-link" href="javascript:void(0)">2</a></li>
-                              <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
+                              <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">1</a></li>
+                              <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">2</a></li>
+                              <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">3</a></li>
                               <li class="page-item">
-                                <a class="page-link" href="javascript:void(0)"><i class="fas fa-chevron-right"></i></a>
+                                <a class="page-link bg-hi-grey" href="javascript:void(0)"><i
+                                    class="fas fa-chevron-right"></i></a>
                               </li>
                             </ul>
                           </div>
@@ -322,11 +323,11 @@
                 Create New Group
               </button>
             </div>
-            <div class="row mt-4">
+            <div class="row mt-4 mx-0">
               <div [ngClass]="{'sub-tab-nav': true,'col-md-12' : !showDoc, 'col-md-8': showDoc}">
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">
+                <div class="card overflow-hidden">
+                  <div class="card-body bg-white px-0 pb-0">
+                    <h5 class="card-title px-3">
                       <div class="row heading">
                         <div class="search col-md-5">
                           <div class="input-group">
@@ -463,7 +464,7 @@
                         </div>
                       </div>
                     </h5>
-                    <div class="card-text">
+                    <div class="card-text px-3">
                       <table [ngClass]="{'table table-hover text-dark w-100': true, 'hide-rows': showDoc}">
                         <thead>
                           <tr>
@@ -489,7 +490,7 @@
                         </tbody>
                       </table>
                     </div>
-                    <div class="card-footer bg-white row justify-content-between">
+                    <div class="card-footer row justify-content-between mx-0">
                       <div class="pages">
                         <div class="input-group mb-3">
                           <select class="custom-select rounded" id="inputGroupSelect02">
@@ -497,7 +498,7 @@
                             <option>20</option>
                           </select>
                           <div class="input-group-append">
-                            <label class="input-group-text bg-white border-0 text-hi-dark-grey"
+                            <label class="input-group-text bg-transparent border-0 text-hi-dark-grey"
                               for="inputGroupSelect02">Showing 1-10 of
                               100</label>
                           </div>
@@ -505,14 +506,16 @@
                       </div>
                       <ul class="pagination">
                         <li class="page-item disabled">
-                          <a class="page-link" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i
-                              class="fas fa-chevron-left"></i></a>
+                          <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1"
+                            aria-disabled="true"><i class="fas fa-chevron-left"></i></a>
                         </li>
-                        <li class="page-item"><a class="page-link" href="javascript:void(0)">1</a></li>
-                        <li class="page-item"><a class="page-link" href="javascript:void(0)">2</a></li>
-                        <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
+                        <li class="page-item active"><a class="page-link bg-hi-grey" href="javascript:void(0)">1</a>
+                        </li>
+                        <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">2</a></li>
+                        <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">3</a></li>
                         <li class="page-item">
-                          <a class="page-link" href="javascript:void(0)"><i class="fas fa-chevron-right"></i></a>
+                          <a class="page-link bg-hi-grey" href="javascript:void(0)"><i
+                              class="fas fa-chevron-right"></i></a>
                         </li>
                       </ul>
                     </div>
